--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>lovable-gpa-preview-pal</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="uds gpa app" />
+    <meta name="author" content="Zakaria Sisu" />
 
-    <meta property="og:title" content="lovable-gpa-preview-pal" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9351962974196404"
+     crossorigin="anonymous"></script>
+
+
+    
+    <meta property="og:title" content="uds-gpa-app" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
