--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9351962974196404"
      crossorigin="anonymous"></script>
 
-
+     <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+     </script>
     
     <meta property="og:title" content="uds-gpa-app" />
     <meta property="og:type" content="website" />
