--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   </head>
 
   <body>
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-9351962974196404">
+    </amp-auto-ads>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
