--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>lovable-gpa-preview-pal</title>
+    <title>uds-gpa-calculator</title>
     <meta name="description" content="uds gpa app" />
     <meta name="author" content="Zakaria Sisu" />
 
@@ -15,12 +15,7 @@
      </script>
     
     <meta property="og:title" content="uds-gpa-app" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
   </head>
 
   <body>
