--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
      </script>
     
-    <meta property="og:title" content="uds-gpa-app" />
+   <!-- <meta property="og:title" content="uds-gpa-app" />
     <meta property="og:type" content="website" />
    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />-->
 
