--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="uds gpa app" />
     <meta name="author" content="Zakaria Sisu" />
 
+    <meta name="google-adsense-account" content="ca-pub-9351962974196404">
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9351962974196404"
      crossorigin="anonymous"></script>
 
