--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
      </script>
     
-   <!-- <meta property="og:title" content="uds-gpa-app" />
-    <meta property="og:type" content="website" />
-   <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />-->
+     <meta property="og:title" content="uds-gpa-app" />
+     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-   <!-- <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-   <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />-->
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
