--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
     <amp-auto-ads type="adsense"
         data-ad-client="ca-pub-9351962974196404">
     </amp-auto-ads>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9351962974196404"
+     crossorigin="anonymous"></script>
+<!-- New display -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9351962974196404"
+     data-ad-slot="9503385658"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+    
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
